# iced

./: .gitignore  CMakeLists.txt  DISASSEMBLER_README.md  Directory.Build.props  Iced.sln  Iced.snk  LICENSE.txt  README.md  appveyor.yml  build.cmd  build.ps1  disassembler.cpp  disassembler.d  global.json
src/cpp/test_constexpr/: CMakeLists.txt
src/rust/: .gitignore  Cargo.toml  pylintrc  rustfmt.toml
src/rust/iced-x86/: Cargo.toml  README.md  build.rs
src/rust/iced-x86-c/: Cargo.toml  README.md  _Build.bat  _CBindGen.bat  _Clean.bat  build.rs  cbindgen.toml
src/rust/iced-x86-c/src/: BlockEncoder.rs  CPUIdFeature.rs  Code.rs  CodeSize.rs  ConditionCode.rs  Decoder.rs  DecoderError.rs  Encoder.rs  EncodingKind.rs  FastFormatter.rs  FlowControl.rs  Formatter.rs  FormatterTextKind.rs  FreeMemory.rs  GasFormatter.rs  Instruction.rs  InstructionInfoFactory.rs  InstructionWith.rs  IntelFormatter.rs  MandatoryPrefix.rs  MasmFormatter.rs  MemorySize.rs  MemorySizeOptions.rs  Mnemonic.rs  MvexConvFn.rs  MvexEHBit.rs  MvexRegMemConv.rs  MvexTupleTypeLutKind.rs  NasmFormatter.rs  NumberBase.rs  OpAccess.rs  OpCodeInfo.rs  OpCodeOperandKind.rs  OpCodeTableKind.rs  OpKind.rs  OptionsProvider.rs  OutputCallback.rs  Register.rs  RepPrefixKind.rs  RoundingControl.rs  (+6 more)
src/rust/iced-x86-fzgt/: Cargo.toml
src/rust/iced-x86-fzgt/src/: main.rs
src/rust/iced-x86-js/: Cargo.toml  README.md
src/rust/iced-x86-js/src/: block_encoder.rs  block_encoder_options.rs  cc.rs  code.rs  code_ext.rs  code_size.rs  condition_code.rs  constant_offsets.rs  cpuid_feature.rs  decoder.rs  decoder_error.rs  decoder_options.rs  encoder.rs  encoding_kind.rs  ex_utils.rs  fast_fmt.rs  flow_control.rs  format_mnemonic_options.rs  formatter.rs  info.rs  instruction.rs  lib.rs  mandatory_prefix.rs  memory_operand.rs  memory_size.rs  memory_size_ext.rs  memory_size_options.rs  mnemonic.rs  mvex_cvt_fn.rs  mvex_eh_bit.rs  mvex_rm_conv.rs  mvex_tt_lut.rs  number_base.rs  op_access.rs  op_code_info.rs  op_code_operand_kind.rs  op_code_table_kind.rs  op_kind.rs  register.rs  register_ext.rs  (+4 more)
src/rust/iced-x86-js/src/tests/: block_encoder.test.js  decoder.test.js  encoder.test.js  fast_formatter.test.js  formatter.test.js  info.test.js  instruction.test.js  memory_size_ext.test.js  op_code_info.test.js  package.json  register_ext.test.js
src/rust/iced-x86-lua/: Cargo.toml  README.md  iced-x86-1.17.0-1.rockspec  iced_x86-1.17.0-1.rockspec  iced_x86-1.18.0-1.rockspec  iced_x86-1.19.0-1.rockspec  iced_x86-1.20.0-1.rockspec  iced_x86-1.21.0-1.rockspec  luarocks-build-unix.sh  stylua.toml
src/rust/iced-x86-lua/.cargo/: config
src/rust/iced-x86-lua/lua/: BlockEncoderOptions.lua  CC_a.lua  CC_ae.lua  CC_b.lua  CC_be.lua  CC_e.lua  CC_g.lua  CC_ge.lua  CC_l.lua  CC_le.lua  CC_ne.lua  CC_np.lua  CC_p.lua  Code.lua  CodeSize.lua  ConditionCode.lua  CpuidFeature.lua  Decoder.lua  DecoderError.lua  DecoderOptions.lua  EncodingKind.lua  FlowControl.lua  FormatMnemonicOptions.lua  FormatterSyntax.lua  Instruction.lua  MandatoryPrefix.lua  MemorySize.lua  MemorySizeOptions.lua  Mnemonic.lua  MvexConvFn.lua  MvexEHBit.lua  MvexRegMemConv.lua  MvexTupleTypeLutKind.lua  OpAccess.lua  OpCodeOperandKind.lua  OpCodeTableKind.lua  OpKind.lua  Register.lua  RepPrefixKind.lua  RflagsBits.lua  (+2 more)
src/rust/iced-x86-lua/src/: blk_enc.rs  coffs.rs  dec.rs  enc.rs  enum_utils.rs  errconv.rs  fmt.rs  fpui.rs  grp_idx.rs  instr.rs  lib.rs  lua_macros.rs  mem_op.rs  memi.rs  memx.rs  opci.rs  regi.rs  regx.rs  ud.rs
src/rust/iced-x86-lua/src/info/: mem.rs  mod.rs  regs.rs
src/rust/iced-x86-lua/tests/: block_encoder_spec.lua  decoder_spec.lua  encoder_spec.lua  formatter_gas_spec.lua  formatter_intel_spec.lua  formatter_masm_spec.lua  formatter_nasm_spec.lua  formatter_spec.lua  iced_test_utils.lua  instruction_create_spec.lua  instruction_spec.lua  memory_operand_spec.lua  memory_size_spec.lua  op_code_info_spec.lua  register_spec.lua
src/rust/iced-x86-py/: .gitignore  Cargo.toml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  build-wheels.sh  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
src/rust/iced-x86-py/docs/: conf.py  index.rst
src/rust/iced-x86-py/docs/src/: BlockEncoder.rst  CC_a.rst  CC_ae.rst  CC_b.rst  CC_be.rst  CC_e.rst  CC_g.rst  CC_ge.rst  CC_l.rst  CC_le.rst  CC_ne.rst  CC_np.rst  CC_p.rst  Code.rst  CodeSize.rst  ConditionCode.rst  ConstantOffsets.rst  CpuidFeature.rst  Decoder.rst  DecoderError.rst  DecoderOptions.rst  Encoder.rst  EncodingKind.rst  FastFormatter.rst  FlowControl.rst  FormatMnemonicOptions.rst  (+31 more)
src/rust/iced-x86-py/iced_x86/: CC_b.py  CC_l.py  CC_le.py  CC_ne.py  CC_p.py  CpuidFeature.py  FormatterSyntax.py  __init__.py  _iced_x86_py.pyi  iced_x86_py.pyi
src/rust/iced-x86-py/src/: block_encoder.rs  constant_offsets.rs  decoder.rs  encoder.rs  enum_utils.rs  fast_formatter.rs  formatter.rs  iced_constants.rs  info.rs  instruction.rs  lib.rs  memory_operand.rs  memory_size_ext.rs  memory_size_info.rs  op_code_info.rs  register_ext.rs  register_info.rs  utils.rs
src/rust/iced-x86-py/tests/: block_encoder_test.py  decoder_test.py  encoder_test.py  fast_formatter_test.py  formatter_gas_test.py  formatter_intel_test.py  formatter_masm_test.py  formatter_nasm_test.py  formatter_test.py  info_test.py  instr_create_test.py  instruction_test.py  memory_operand_test.py  memory_size_test.py  op_code_info_test.py  register_test.py
src/rust/iced-x86/src/: block_enc.rs  code.rs  code_asm.rs  constant_offsets.rs  constantoffsets.rs  data_reader.rs  decoder.rs  encoder.rs  enums.rs  iced_constants.rs  iced_error.rs  iced_features.rs  icedfeatures.rs  instruction.rs  instruction_create.rs  instruction_internal.rs  instruction_memory_sizes.rs  instruction_op_counts.rs  instructionmemorysizes.rs  instructionopcounts.rs  lib.rs  memory_size.rs  memorysize.rs  mnemonic.rs  mnemonics.rs  register.rs  register_iterator.rs  tuple_type_tbl.rs  x86.rs
src/rust/loona/: Cargo.toml  build.rs
src/rust/loona/src/: error.rs  lib.rs  libc.rs  lua.rs  lua_api.rs  macros.rs  prelude.rs  tofrom.rs
(+3143 files in other folders)
