[package]
name = "Iced"
version = "1.0.5"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["cdylib"]      # Creates dynamic lib
# crate-type = ["staticlib"] # Creates static lib

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.winres]
FileDescription = ""
FileVersion = "1.0.5.0"
ProductName = "Iced"
ProductVersion = "1.2.1.0"
OriginalFilename = "Iced.dll"
LegalCopyright = "TetzkatLipHoka © 2022-2024"

[dependencies]
libc = "0.2.152"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[dependencies.iced-x86]
version = "1.21.0"
default-features = false
#features = ["std", "decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "code_asm", "mvex"]
features = ["std", "decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt", "mvex"]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3