[package]
name = "iced-x86-py"
version = "1.14.0"
authors = ["iced project and contributors <https://github.com/icedland>"]
edition = "2018"
publish = false

[lib]
name = "_iced_x86_py"
crate-type = ["cdylib"]

[dependencies]
static_assertions = "1.1.0"
bincode = "1.3.3"

[dependencies.pyo3]
version = "0.14.1"
default-features = false
features = ["macros", "extension-module", "abi3-py36"]

[dependencies.iced-x86]
# If building from sdist, it should use the exact same version as the sdist.
version = "=1.14.0"
features = ["serde", "mvex"]
# To use ../iced-x86 source code, add this to your $HOME/.cargo/config.toml
#	paths = ["/abs/path/to/iced/src/rust/iced-x86"]
# or uncomment this line:
#path = "/abs/path/to/iced/src/rust/iced-x86"
# Don't remove/modify the next line. Build scripts replace it with the real path
#pathci

[workspace]
# We can only override [profile.release] if this is the root workspace.
# So make sure this is the root workspace.

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
