[package]
name = "iced-x86"
version = "1.12.0"
authors = ["iced project and contributors <https://github.com/icedland>"]
edition = "2018"
license = "MIT"
description = "iced-x86 is a blazing fast and correct x86/x64 disassembler, assembler and instruction decoder written in Rust"
homepage = "https://github.com/icedland/iced"
repository = "https://github.com/icedland/iced"
readme = "README.md"
# At most 5 keywords can be used
keywords = ["disassembler", "assembler", "x86", "amd64", "x86_64"]
categories = ["no-std", "development-tools::debugging", "encoding", "hardware-support", "wasm"]

# These features are documented in README.md / lib.rs
[features]
default = ["std", "decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt"]
decoder = []
encoder = []
block_encoder = ["encoder"]
op_code_info = ["encoder"]
instr_info = []
gas = []
intel = []
masm = []
nasm = []
fast_fmt = []
# Not used anymore
db = []
std = ["lazy_static"]
# no_std feature is needed since std and no_std require different deps
no_std = ["lazy_static/spin_no_std", "hashbrown"]
exhaustive_enums = []
no_vex = []
no_evex = []
no_xop = []
no_d3now = []
# Don't use
__internal_mem_vsib = []

[dependencies]
# if: always
static_assertions = "1.1.0"

# if: decoder or encoder or gas or intel or masm or nasm or fast_fmt
# It's not really optional, std or no_std must be used and they both require it.
lazy_static = { version = "1.4.0", optional = true }

# if: no_std and block_encoder
# 0.11.0 requires MSRV 1.49.0 but we support 1.41.0
hashbrown = { version = ">=0.9.0, <100.0.0", optional = true }
