[package]
name = "iced-x86"
version = "1.21.0"
edition = "2021"
license = "MIT"
description = "iced-x86 is a blazing fast and correct x86/x64 disassembler, assembler and instruction decoder written in Rust"
homepage = "https://github.com/icedland/iced"
repository = "https://github.com/icedland/iced"
readme = "README.md"
# At most 5 keywords can be used
keywords = ["disassembler", "assembler", "x86", "amd64", "x86_64"]
categories = ["no-std", "development-tools::debugging", "encoding", "hardware-support", "wasm"]
# Don't include the tests when uploading to crates.io
exclude = ["/src/**/test/", "/src/**/tests/", "/src/**/test_utils/"]
rust-version = "1.79.0"

# These features are documented in README.md / lib.rs
[features]
default = ["std", "decoder", "encoder", "block_encoder", "op_code_info", "instr_info", "gas", "intel", "masm", "nasm", "fast_fmt"]
decoder = []
encoder = []
block_encoder = ["encoder"]
op_code_info = ["encoder"]
instr_info = []
gas = []
intel = []
masm = []
nasm = []
fast_fmt = []
# Not used anymore, but removing it is a breaking change
db = []
std = ["lazy_static"]
# no_std feature is needed since std and no_std require different deps
no_std = ["lazy_static/spin_no_std"]
exhaustive_enums = []
no_vex = []
no_evex = []
no_xop = []
no_d3now = []
mvex = []
code_asm = ["block_encoder"]
# Don't use
__internal_flip = []

[dependencies]
# if: decoder or encoder or gas or intel or masm or nasm or fast_fmt
# It's not really optional, std or no_std must be used and they both require it.
lazy_static = { version = "1.4.0", optional = true }

# If: serde 
[dependencies.serde]
version = "1.0.16"
optional = true
default-features = false

[dev-dependencies]
bincode = "1.3.3"
serde_json = "1.0.78"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
features = ["serde", "code_asm", "mvex"]
default-target = "x86_64-unknown-linux-gnu"
targets = []
