[package]
# luna was taken, so I renamed it even though it's close to 0% probability
# that this crate gets uploaded to crates.io.
name = "loona"
version = "0.1.0"
edition = "2018"
publish = false

[features]
default = []
lua5_1 = []
lua5_2 = []
lua5_3 = []
lua5_4 = []
extra_checks = []

[dependencies]
libc = "0.2"
static_assertions = "1.1.0"

[workspace]
